Moved Israels ticket loading code into student landing, fixed button icon styling, fixed button bottom border cutting off

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -99,11 +99,11 @@ footer {
 
 button[type="button"], button[type="submit"] input[type="reset"] {
     background: linear-gradient( 333deg, rgba(167, 115, 215, 0.72) 21%, rgba(169, 235, 244, 1) 75%);
-    border: none;
     color: white;
     letter-spacing: 0.5px;
     font-weight: bolder;
     font-size: 14px;
+    border: solid;
     justify-content: center;
     /* width: 70%; */
     height: 40px;
